--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "@rails/activestorage": "^6.0.3-2",
     "@rails/ujs": "^6.0.3-2",
     "@rails/webpacker": "5.1.1",
-    "bootstrap": "4.4",
+    "bulma": "^0.9.1",
     "core-js": "^3.6.5",
     "font-awesome": "4.7.0",
     "jquery": "^3.4.1",
